<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/weatherMoreLayout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dip">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dip"
            android:layout_weight="1"
            android:background="@color/colorForeground"
            android:columnCount="2"
            android:padding="20dp"
            android:rowCount="3">

            <ImageView
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0"
                android:src="@mipmap/ic_user_wind"/>

            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/wind_direction"/>

            <TextView
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="1"
                android:text="@string/wind_power"/>

            <TextView
                android:id="@+id/windDirectionView"
                android:layout_column="0"
                android:layout_row="2"
                android:text="南风"/>

            <TextView
                android:id="@+id/windPowerView"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="2"
                android:text="2级"/>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorForeground"
            android:columnCount="2"
            android:padding="20dp"
            android:rowCount="3">

            <ImageView
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0"
                android:src="@mipmap/ic_user_sunrise"/>

            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/sunrise"/>

            <TextView
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="1"
                android:text="@string/sunset"/>

            <TextView
                android:id="@+id/sunriseView"
                android:layout_column="0"
                android:layout_row="2"
                android:text="05:07"/>

            <TextView
                android:id="@+id/sunsetView"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="2"
                android:text="19:03"/>
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dip"
            android:layout_weight="1"
            android:background="@color/colorForeground"
            android:columnCount="1"
            android:padding="20dp"
            android:rowCount="3">

            <ImageView
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0"
                android:src="@mipmap/ic_user_humidity"/>

            <TextView
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:layout_row="1"
                android:text="@string/humidity"/>

            <TextView
                android:id="@+id/humidityView"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:layout_row="2"
                android:text="67%"/>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorForeground"
            android:columnCount="1"
            android:padding="20dp"
            android:rowCount="3">

            <ImageView
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0"
                android:src="@mipmap/ic_user_temperature"/>

            <TextView
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:layout_row="1"
                android:text="@string/apparent_temperature"/>

            <TextView
                android:id="@+id/apparentTemperatureView"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:layout_row="2"
                android:text="29"/>
        </GridLayout>
    </LinearLayout>

</LinearLayout>