<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:background="@color/colorForeground"
                                             android:padding="5dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1666666666666667"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3333333333333333"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideLine4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6666666666666667"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideLine5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8333333333333333"/>

    <TextView
        android:id="@+id/day1View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_yesterday"
        app:layout_constraintEnd_toStartOf="@id/guideLine1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/day2View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_today"
        app:layout_constraintEnd_toStartOf="@id/guideLine2"
        app:layout_constraintStart_toStartOf="@id/guideLine1"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/day3View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_tomorrow"
        app:layout_constraintEnd_toStartOf="@id/guideLine3"
        app:layout_constraintStart_toEndOf="@id/guideLine2"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/day4View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guideLine4"
        app:layout_constraintStart_toEndOf="@id/guideLine3"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/day5View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideLine5"
        app:layout_constraintStart_toEndOf="@id/guideLine4"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/day6View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideLine5"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/weather1View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guideLine1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day1View"/>

    <ImageView
        android:id="@+id/weather2View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guideLine2"
        app:layout_constraintStart_toStartOf="@id/guideLine1"
        app:layout_constraintTop_toBottomOf="@id/day2View"/>

    <ImageView
        android:id="@+id/weather3View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guideLine3"
        app:layout_constraintStart_toEndOf="@id/guideLine2"
        app:layout_constraintTop_toBottomOf="@id/day3View"/>

    <ImageView
        android:id="@+id/weather4View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guideLine4"
        app:layout_constraintStart_toEndOf="@id/guideLine3"
        app:layout_constraintTop_toBottomOf="@id/day4View"/>

    <ImageView
        android:id="@+id/weather5View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideLine5"
        app:layout_constraintStart_toEndOf="@id/guideLine4"
        app:layout_constraintTop_toBottomOf="@id/day5View"/>

    <ImageView
        android:id="@+id/weather6View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideLine5"
        app:layout_constraintTop_toBottomOf="@id/day6View"/>

    <TextView
        android:id="@+id/temp1View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guideLine1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather1View"/>

    <TextView
        android:id="@+id/temp2View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guideLine2"
        app:layout_constraintStart_toStartOf="@id/guideLine1"
        app:layout_constraintTop_toBottomOf="@id/weather2View"/>

    <TextView
        android:id="@+id/temp3View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guideLine3"
        app:layout_constraintStart_toEndOf="@id/guideLine2"
        app:layout_constraintTop_toBottomOf="@id/weather3View"/>

    <TextView
        android:id="@+id/temp4View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guideLine4"
        app:layout_constraintStart_toEndOf="@id/guideLine3"
        app:layout_constraintTop_toBottomOf="@id/weather5View"/>

    <TextView
        android:id="@+id/temp5View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideLine5"
        app:layout_constraintStart_toEndOf="@id/guideLine4"
        app:layout_constraintTop_toBottomOf="@id/weather6View"/>

    <TextView
        android:id="@+id/temp6View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideLine5"
        app:layout_constraintTop_toBottomOf="@id/weather6View"/>
</android.support.constraint.ConstraintLayout>